# streamlink-twitch-gui

./: .gitignore  .gitleaksignore  CONTRIBUTING.md  README.md  SECURITY.md  deny.toml  package.json
.github/: dependabot.yml  release_template.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  config.yml
.github/workflows/: main.yml  next-ci.yml  next-release.yml  security.yml
docs/plans/streamlink-twitch-gui-modernization/: 00-conventions.md  01-foundation-and-streamlink.md  02-twitch-and-ui.md  03-migration-and-release.md  README.md  card-architecture.txt
docs/rewrite/: architecture-analysis.md  final-verification-report.md  legacy-settings-import.md  parity-matrix.md  releasing.md
next/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
next/e2e/: retained-paths.spec.ts
next/fixtures/: domain-contracts.json
next/src/: App.test.tsx  App.tsx  main.tsx  styles.css
next/src-tauri/: Cargo.toml  tauri.conf.json
next/src-tauri/capabilities/: main.json
next/src-tauri/src/: desktop.rs  lib.rs  main.rs  startup.rs  updater_signature.rs
next/src-tauri/src/domain/: stream.rs
next/src-tauri/src/migration/: legacy.rs  mod.rs
next/src-tauri/src/settings/: mod.rs
next/src-tauri/src/streamlink/: arguments.rs  commands.rs  discovery.rs  inspect.rs  mod.rs  process.rs  version.rs
next/src-tauri/src/twitch/: auth.rs  client.rs  commands.rs  lifecycle.rs  login.rs  mod.rs  models.rs  pagination.rs  token_store.rs
next/src-tauri/tests/: legacy_migration.rs  settings_store.rs  startup_failure.rs  streamlink_arguments.rs  streamlink_contract.rs  streamlink_process.rs  twitch_auth.rs  twitch_helix.rs  twitch_lifecycle.rs  twitch_login.rs
next/src-tauri/tests/fixtures/: fake_streamlink.rs  streamlink-version-8.0.txt  streamlink-version-8.4.txt  streamlink-version-malformed.txt
next/src-tauri/tests/fixtures/legacy-settings/: corrupt.json  future.json  partial.json  valid.json
next/src-tauri/tests/fixtures/streamlink-plugins/: contract.py
next/src-tauri/tests/fixtures/streams/: README.md  streamlink-8.0-h264.synthetic.json  streamlink-8.4-modern-codecs.synthetic.json
next/src/api/: backend.test.ts  (+1 more)
scripts/: create_release_config.py  next-release-version.sh  prepare_release_assets.py  release_common.py  release_metadata.py  test-next-release-version.sh  verify_release_assets.py  verify_release_tag.py  verify_windows_startup_error.ps1  verify_workflows.py
scripts/tests/: test_gitleaks_config.py  test_release_tools.py  test_windows_startup_contract.py
src/config/: main.json  update.json
(+48 files in other folders)
