[package]
name = "streamlink-twitch-gui"
version = "0.1.0"
description = "A secure Streamlink desktop client"
authors = ["Streamlink Twitch GUI contributors"]
edition = "2024"
license = "MIT"

[lib]
name = "streamlink_twitch_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "streamlink-twitch-gui"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = ["desktop"]
desktop = ["dep:tauri"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tauri = { version = "2.11", optional = true, default-features = false, features = ["compression", "custom-protocol", "dynamic-acl", "wry", "x11"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.175"
