[package]
name = "streamlink-twitch-gui"
version = "0.1.0"
description = "A secure Streamlink desktop client"
authors = ["Streamlink Twitch GUI contributors"]
edition = "2024"
license = "MIT"

[lib]
name = "streamlink_twitch_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "streamlink-twitch-gui"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-plugin-global-shortcut", "dep:tauri-plugin-notification", "dep:tauri-plugin-opener"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
shlex = "1.3.0"
tauri = { version = "2.11", optional = true, default-features = false, features = ["compression", "custom-protocol", "dynamic-acl", "tray-icon", "wry", "x11"] }
tauri-plugin-global-shortcut = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
thiserror = "2.0.16"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2.175"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
